; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/nodes/extr_readfuncs.c__readExtensibleNode.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/nodes/extr_readfuncs.c__readExtensibleNode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i8* }
%struct.TYPE_6__ = type { i32 (%struct.TYPE_7__*)*, i32 }

@length = common dso_local global i32 0, align 4
@token = common dso_local global i32 0, align 4
@ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"extnodename has to be supplied\00", align 1
@T_ExtensibleNode = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.TYPE_7__* ()* @_readExtensibleNode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.TYPE_7__* @_readExtensibleNode() #0 {
  %1 = alloca %struct.TYPE_7__*, align 8
  %2 = alloca %struct.TYPE_6__*, align 8
  %3 = alloca %struct.TYPE_7__*, align 8
  %4 = alloca i8*, align 8
  %5 = call i32 (...) @READ_TEMP_LOCALS()
  %6 = call i32 @pg_strtok(i32* @length)
  store i32 %6, i32* @token, align 4
  %7 = call i32 @pg_strtok(i32* @length)
  store i32 %7, i32* @token, align 4
  %8 = load i32, i32* @token, align 4
  %9 = load i32, i32* @length, align 4
  %10 = call i8* @nullable_string(i32 %8, i32 %9)
  store i8* %10, i8** %4, align 8
  %11 = load i8*, i8** %4, align 8
  %12 = icmp ne i8* %11, null
  br i1 %12, label %16, label %13

13:                                               ; preds = %0
  %14 = load i32, i32* @ERROR, align 4
  %15 = call i32 @elog(i32 %14, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0))
  br label %16

16:                                               ; preds = %13, %0
  %17 = load i8*, i8** %4, align 8
  %18 = call %struct.TYPE_6__* @GetExtensibleNodeMethods(i8* %17, i32 0)
  store %struct.TYPE_6__* %18, %struct.TYPE_6__** %2, align 8
  %19 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %20 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 8
  %22 = load i32, i32* @T_ExtensibleNode, align 4
  %23 = call i64 @newNode(i32 %21, i32 %22)
  %24 = inttoptr i64 %23 to %struct.TYPE_7__*
  store %struct.TYPE_7__* %24, %struct.TYPE_7__** %3, align 8
  %25 = load i8*, i8** %4, align 8
  %26 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %27 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %26, i32 0, i32 0
  store i8* %25, i8** %27, align 8
  %28 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %29 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %28, i32 0, i32 0
  %30 = load i32 (%struct.TYPE_7__*)*, i32 (%struct.TYPE_7__*)** %29, align 8
  %31 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %32 = call i32 %30(%struct.TYPE_7__* %31)
  %33 = call i32 (...) @READ_DONE()
  %34 = load %struct.TYPE_7__*, %struct.TYPE_7__** %1, align 8
  ret %struct.TYPE_7__* %34
}

declare dso_local i32 @READ_TEMP_LOCALS(...) #1

declare dso_local i32 @pg_strtok(i32*) #1

declare dso_local i8* @nullable_string(i32, i32) #1

declare dso_local i32 @elog(i32, i8*) #1

declare dso_local %struct.TYPE_6__* @GetExtensibleNodeMethods(i8*, i32) #1

declare dso_local i64 @newNode(i32, i32) #1

declare dso_local i32 @READ_DONE(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
